--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,15 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Database
+database.db
+
+#Server
+minecraft/servers
+
+#Software
+minecraft/software
+
+#Temp
+temp
