--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "accept_eula": false,
+    "eula": false,
     "software": {
         "fabric": {
             "downloadUrl": "https://meta.fabricmc.net/v2/versions/loader/1.18.2/0.14.4/0.10.2/server/jar"
