--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "socket.io": "^4.5.0",
     "sqlite": "^4.1.1",
     "sqlite3": "^5.0.6"
+  },
+  "devDependencies": {
+    "eslint": "^8.14.0"
   }
 }
