--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "eula": false,
+    "eula": true,
     "eulaText": "#By changing the setting below to TRUE you are indicating your agreement to our EULA (https://account.mojang.com/documents/minecraft_eula).\n#\neula=true\n",
     "software": {
         "fabric": {
