--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "https": "^1.0.0",
     "lodash": "^4.17.19",
     "morgan": "^1.9.1",
+    "node-fetch": "^3.2.4",
     "socket.io": "^4.5.0",
     "sqlite": "^4.1.1",
     "sqlite3": "^5.0.6"
