--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "http": "^0.0.1-security",
     "https": "^1.0.0",
     "lodash": "^4.17.19",
+    "markdown-it": "^13.0.1",
     "morgan": "^1.9.1",
-    "node-fetch": "^3.2.4",
     "socket.io": "^4.5.0",
     "sqlite": "^4.1.1",
     "sqlite3": "^5.0.6"
