--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lodash": "^4.17.21",
     "markdown-it": "^13.0.1",
     "morgan": "^1.10.0",
+    "properties-parser": "^0.3.1",
     "socket.io": "^4.5.1",
     "sqlite": "^4.1.1",
     "sqlite3": "^5.0.8"
